2009-05-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* png: Updated libpng to 1.2.35.

	* lcms: Updated lcms to 1.18a.

2009-04-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/display.imdoc: Fix documentation for crop and chop keyboard
	accelerators.  Fixes SourceForge bug #2593388 "error in the
	documentation/Keyboard accelarators".

2009-04-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (GetImageBoundingBox): If we fail to find a
	smaller bounding box, then the returned bounding box is the entire
	image.

	* VisualMagick/bin/delegates.mgk: Remove bounding box option (-g) from
	Postscript delegate specifications.

	* config/delegates.mgk.in: Remove bounding box option (-g) from
	Postscript delegate specifications.

	* coders/{ept.c, pdf.c, ps.c} : PDF bounding box is sometimes
	incorrect or not globally applicable so don't specify bounding box
	when reading PDF files.  Postscript files do need the bounding box
	so make sure that it is still supplied.  Resolves SF tracker issue
	2487651 "convert from pdf chops off rhs".

2009-01-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* GraphicsMagick.spec.in: The module .la files need to be
	installed as part of the base install or else the modules will
	fail to load.

2009-01-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dib.c (ReadDIBImage): Fix assertion thrown for DIB files
	with negative image height values.

2009-01-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (ReadBMPImage): Fix assertion thrown for BMP files
	with negative image height values.  Resolves SF issue 2523536 "bug
	in bmp coder".

	* Makefile.am: Don't install Magick++ headers if Magick++ is
	disabled.

	* GraphicsMagick.spec.in: --enable-lzw option is no longer used.

2009-01-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.2.7 released.

2008-12-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
