@@ -1,3 +1,12 @@
+2009-05-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/resize.c (HorizontalFilter, VerticalFilter): When
+	resizing a non-opaque image, attenuate the influence of
+	surrounding colors based on their degree of transparency in order
+	to avoid "halos" around objects caused by colors which are
+	transparent and therefore not part of the visible image.  Patch
+	contributed by Pavel Merdin via SourceForge Tracker #2792322.
+
 2009-05-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* png: Updated libpng to 1.2.35.
